# faq

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: changelog.yml
docs/source/: changelog.rst  conf.py  index.rst
docs/source/about/: contributing.rst  glossary.rst  index.rst  license.rst
docs/source/contents/: index.rst
docs/source/contents/Hydrogen/: index.rst
docs/source/contents/NoctisDice/: index.rst
docs/source/contents/OlivaDice/: index.rst
docs/source/contents/SealDice/: index.rst
docs/source/contents/Shiki/: deploy.rst  index.rst  intro.rst  troubleshooting.rst  useage.rst
docs/source/development/: cqcode.rst  index.rst
